修改few-shot排序，启动的在前，全局在后，最相似的放前面。